fix slider rotation on firefox

--- a/src/heatmap.css
+++ b/src/heatmap.css
@@ -77,7 +77,7 @@ body {
   cursor: pointer;
 }
 
-.heatmap .slider[orient=vertical] {
+.heatmap .y-slider {
   height: 5px;
   transform-origin: 25px 40px;
   transform: rotate(90deg);
@@ -111,7 +111,6 @@ body {
 }
 
 .heatmap .x-scrollbar .scroll-handle {
-  width: 10%;
   height: 13px;
 }
 
@@ -120,7 +119,6 @@ body {
 }
 
 .heatmap .y-scrollbar .scroll-handle {
-  height: 10%;
   width: 13px;
 }
 
